--- a/telegram-charts/Main.storyboard
+++ b/telegram-charts/Main.storyboard
@@ -9,16 +9,47 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Chart List View Controller-->
+        <scene sceneID="rha-Ba-omq">
+            <objects>
+                <viewController storyboardIdentifier="ChartListViewController" id="VMb-Gs-OUF" customClass="ChartListViewController" customModule="telegram_charts" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vP8-ZC-2Ah">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Z7v-EJ-fEd">
+                                <rect key="frame" x="0.0" y="88" width="375" height="724"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Z7v-EJ-fEd" firstAttribute="leading" secondItem="q52-7F-dSS" secondAttribute="leading" id="DPh-IL-fuC"/>
+                            <constraint firstItem="q52-7F-dSS" firstAttribute="trailing" secondItem="Z7v-EJ-fEd" secondAttribute="trailing" id="G4v-gJ-jN0"/>
+                            <constraint firstAttribute="bottom" secondItem="Z7v-EJ-fEd" secondAttribute="bottom" id="NP9-mf-Xzk"/>
+                            <constraint firstItem="Z7v-EJ-fEd" firstAttribute="top" secondItem="q52-7F-dSS" secondAttribute="top" id="hpM-N8-ZlM"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="q52-7F-dSS"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="a7Q-k0-Fq4"/>
+                    <connections>
+                        <outlet property="tableView" destination="Z7v-EJ-fEd" id="OG9-Fj-afw"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="szQ-Ou-iQs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="935" y="42"/>
+        </scene>
         <!--Charts View Controller-->
         <scene sceneID="qNN-2O-4YC">
             <objects>
-                <viewController id="mIj-gD-qHh" customClass="ChartsViewController" customModule="telegram_charts" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ChartsViewController" id="mIj-gD-qHh" customClass="ChartsViewController" customModule="telegram_charts" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Tzq-az-xot">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="Vet-Ia-GcG">
-                                <rect key="frame" x="0.0" y="88" width="375" height="724"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="768"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                             </tableView>
                         </subviews>
@@ -38,7 +69,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4IZ-vm-brE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="941.60000000000002" y="42.857142857142861"/>
+            <point key="canvasLocation" x="1650" y="42"/>
         </scene>
         <!--Root Navigation Controller-->
         <scene sceneID="o61-QU-Qn5">
@@ -51,7 +82,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="mIj-gD-qHh" kind="relationship" relationship="rootViewController" id="bM5-a9-BkK"/>
+                        <segue destination="VMb-Gs-OUF" kind="relationship" relationship="rootViewController" id="N3c-qG-QCI"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mdk-jg-MpL" userLabel="First Responder" sceneMemberID="firstResponder"/>
